--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4">
-                    <app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"></app-register>
+                    <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
                 </div>
             </div>           
         </div>
